feat: add circulation self-service gateway
